# compiler

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  readme.md
libs/FiniteAutomation/: CMakeLists.txt
libs/FiniteAutomation/include/: MealyMachine.h  MooreMachine.h
libs/FiniteAutomation/src/: MealyMachine.cpp  MooreMachine.cpp
libs/FiniteAutomaton/: CMakeLists.txt
libs/FiniteAutomaton/include/: Converter.h  MealyMachine.h
libs/FiniteAutomaton/src/: Converter.cpp  MealyMachine.cpp
res/: input.dot  mealy.dot  moore.dot
tests/: CMakeLists.txt  MachineTests.cpp
